# oneCCL

./: .gitignore  .gitmodules  3rd-party.txt  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  Makefile.custom  README.md  TODOs  sftp-config.json  third-party-programs.txt
examples/: CMakeLists.txt  Makefile  allgatherv.c  allgatherv.cpp  allreduce.c  allreduce.cpp  allreduce_cpp.cpp  base.h  base.hpp  bcast.c  bcast.cpp  benchmark.c  communicator.cpp  custom_allreduce.cpp  out_of_order_allreduce.cpp  priority_allreduce.c  priority_allreduce.cpp  reduce.c  reduce.cpp  run.sh  sparse_allreduce.cpp  vector_allgatherv.cpp
examples/benchmark/: CMakeLists.txt  benchmark.cpp
examples/common/: CMakeLists.txt  api_info.cpp  benchmark.cpp  platform_info.cpp  version.cpp
examples/cpu/: CMakeLists.txt  allgatherv.cpp  allgatherv_cpp.cpp  allgatherv_iov.cpp  allreduce.c  allreduce.cpp  allreduce_bfp16.cpp  allreduce_cpp.cpp  allreduce_k8s.c  allreduce_rs.c  alltoall.c  alltoallv.cpp  alltoallv_cpp.cpp  base.h  base.hpp  bcast.cpp  bcast_cpp.cpp  benchmark.c  benchmark.cpp  broadcast.cpp  communicator.cpp  communicator_cpp.cpp  cpu_allgatherv_test.c  cpu_allgatherv_test.cpp  cpu_allreduce_bf16_test.cpp  cpu_allreduce_bfp16.c  cpu_allreduce_cpp_test.cpp  cpu_allreduce_test.c  cpu_allreduce_test.cpp  custom_allreduce.cpp  datatype.cpp  external_kvs.cpp  out_of_order_allreduce.cpp  priority_allreduce.cpp  reduce.cpp  reduce_cpp.cpp  reduce_scatter.cpp  sparse_allreduce.cpp  sparse_test_algo.hpp  unordered_allreduce.cpp  (+1 more)
examples/external_launcher/: CMakeLists.txt  external_launcher.cpp  run.sh  run_binary.sh
examples/include/: base.h  base.hpp  base_utils.hpp  bf16.hpp  bfp16.h  store.hpp  sycl_base.hpp
examples/kvs/: CMakeLists.txt  N_threads_M_devices.cpp  N_threads_one_device.cpp  one_thread_N_devices.cpp  one_thread_n_devices.cpp  one_thread_one_device.cpp
examples/level_zero/: CMakeLists.txt  allreduce_l0.cpp  l0_allreduce_subdevices_cpp_test.cpp  l0_bcast_subdevices_cpp_test.cpp  l0_thread_allgatherv_cpp_test.cpp  l0_thread_allreduce_cpp_test.cpp  l0_thread_alltoallv_cpp_test.cpp  l0_thread_bcast_cpp_test.cpp  l0_thread_reduce_cpp_test.cpp
examples/resizable/: resizable.c  run.sh
examples/sycl/: CMakeLists.txt  sycl_allgatherv_cpp_test.cpp  sycl_allgatherv_custom_usm_test.cpp  sycl_allgatherv_inplace_cpp_test.cpp  sycl_allgatherv_inplace_test.cpp  sycl_allgatherv_inplace_usm_test.cpp  sycl_allgatherv_test.cpp  sycl_allgatherv_usm_cpp_test.cpp  sycl_allgatherv_usm_test.cpp  sycl_allreduce_cpp_test.cpp  sycl_allreduce_inplace_usm_test.cpp  sycl_allreduce_test.cpp  sycl_allreduce_usm_test.cpp  sycl_alltoall_cpp_test.cpp  sycl_alltoall_test.cpp  sycl_alltoall_usm_cpp_test.cpp  sycl_alltoall_usm_test.cpp  sycl_alltoallv_cpp_test.cpp  sycl_alltoallv_inplace_usm_test.cpp  sycl_alltoallv_test.cpp  sycl_alltoallv_usm_cpp_test.cpp  sycl_alltoallv_usm_test.cpp  sycl_bcast_cpp_test.cpp  sycl_bcast_test.cpp  sycl_bcast_usm_cpp_test.cpp  sycl_bcast_usm_test.cpp  sycl_broadcast_test.cpp  sycl_broadcast_usm_test.cpp  sycl_reduce_cpp_test.cpp  sycl_reduce_inplace_usm_test.cpp  sycl_reduce_scatter_test.cpp  sycl_reduce_scatter_usm_test.cpp  sycl_reduce_test.cpp  sycl_reduce_usm_test.cpp
internal/examples/: CMakeLists.txt
src/: CMakeLists.txt  c_bind.cpp  ccl.cpp  ccl_api_functions.cpp  ccl_api_functions_generators.hpp  ccl_app_api_coll_attr.cpp  ccl_app_api_comm_attr.cpp  ccl_app_api_comm_split_attr.cpp  ccl_app_api_datatype_attr.cpp  ccl_app_api_event.cpp  ccl_app_api_init_attr.cpp  ccl_app_api_kvs_attr.cpp  ccl_app_api_request.cpp  ccl_cpp_api.cpp  ccl_cpp_api_explicit_in.hpp  ccl_cpp_communicator.cpp  ccl_cpp_context.cpp  ccl_cpp_device.cpp  ccl_cpp_device_communicator.cpp  ccl_cpp_environment.cpp  ccl_cpp_event.cpp  ccl_cpp_event_internal.cpp  ccl_cpp_gpu_api.cpp  ccl_cpp_kvs.cpp  ccl_cpp_stream.cpp  ccl_cpp_utils.cpp  ccl_empty_attr.cpp  ccl_empty_coll_attr.cpp  ccl_empty_comm_attr.cpp  ccl_empty_comm_split_attr.cpp  ccl_empty_init_attr.cpp  ccl_empty_kvs_attr.cpp  ccl_empty_stream.cpp  ccl_gpu_module.hpp  ccl_gpu_modules.cpp  ccl_utils.cpp  coll_attr_creation_impl.hpp  coll_attr_impl.hpp  comm.hpp  comm_attr_impl.hpp  (+44 more)
src/atl/: CMakeLists.txt  atl.c  atl.cpp  atl.h  atl_base_comm.cpp  atl_base_comm.h  atl_base_comm.hpp  atl_base_transport.cpp  atl_base_transport.hpp  atl_def.cpp  atl_def.h  atl_mpi_comm.cpp  atl_mpi_comm.h  atl_mpi_comm.hpp  atl_mpi_global_data.cpp  atl_mpi_global_data.hpp  atl_ofi_comm.cpp  atl_ofi_comm.h  atl_ofi_comm.hpp  atl_wrapper.cpp  atl_wrapper.h  kube_example.cpp
src/coll/: allgatherv.c  allgatherv.cpp  allreduce.c  allreduce.cpp  allreduce_rma.cpp  allreduce_rma.hpp  barrier.c  barrier.cpp  bcast.c  bcast.cpp  ccl_allgather_op_attr.cpp  ccl_allgather_op_attr.hpp  ccl_allgather_op_attr_impl.hpp  ccl_allreduce_op_attr.cpp  ccl_allreduce_op_attr.hpp  ccl_allreduce_op_attr_impl.hpp  ccl_alltoall_op_attr.cpp  ccl_alltoall_op_attr.hpp  ccl_alltoall_op_attr_impl.hpp  ccl_alltoallv_op_attr.cpp  ccl_alltoallv_op_attr.hpp  ccl_alltoallv_op_attr_impl.hpp  ccl_barrier_attr.hpp  ccl_barrier_attr_impl.hpp  ccl_barrier_op_attr.cpp  ccl_bcast_op_attr.cpp  ccl_bcast_op_attr.hpp  ccl_bcast_op_attr_impl.hpp  ccl_reduce_op_attr.cpp  ccl_reduce_op_attr.hpp  ccl_reduce_op_attr_impl.hpp  ccl_reduce_scatter_op_attr.cpp  ccl_reduce_scatter_op_attr.hpp  ccl_reduce_scatter_op_attr_impl.hpp  ccl_sparse_allreduce_op_attr.cpp  ccl_sparse_allreduce_op_attr.hpp  ccl_sparse_allreduce_op_attr_impl.hpp  coll.c  coll.cpp  coll.h  (+17 more)
src/comm/: atl_tag.cpp  atl_tag.hpp  comm.cpp  comm.hpp  comm_common_attr.hpp  comm_id_storage.hpp  comm_impl.hpp  comm_interface.hpp  comm_selector.cpp  comm_selector.hpp  comm_split_common_attr.hpp  stub_comm.cpp  stub_comm.hpp
src/comp/: bfloat16.cpp  bfloat16.hpp  comp.c  comp.cpp  comp.h  comp.hpp
src/exec/: ccl_listener.cpp  ccl_listener.hpp  ccl_thread.cpp  ccl_thread.hpp  exec.c  exec.cpp  exec.h  exec.hpp  service_worker.cpp  service_worker.hpp  worker.c  worker.cpp  worker.h  worker.hpp
src/fusion/: fusion.cpp  fusion.hpp
src/kernels/: a2a_bcast.cl  (+40 more)
(+1837 files in other folders)
