file(GLOB sources "*.c" "*.cpp")

foreach(src ${sources})
    get_filename_component(executable ${src} NAME_WE)
    add_executable(${executable} ${src})
    target_include_directories(${executable} PRIVATE ${EXAMPLES_INC_DIRS})
    target_compile_options(${executable} PRIVATE "-I/usr/include/level_zero/")
    link_directories("/usr/lib/level_zero/")
#    message ("LevelZero examples: ${CCL_INC_DIRS}, ROOT: ${L0_ROOT}")
    target_link_libraries(${executable} PUBLIC rt)
    target_link_libraries(${executable} PUBLIC m)
    target_link_libraries(${executable} PRIVATE ccl)
    #target_link_libraries(${executable} PRIVATE xe_loader)
    #target_link_libraries(${executable} PUBLIC LevelZero::level_zero_icd_loader)
    target_link_libraries(${executable} PUBLIC level_zero)
    install(TARGETS ${executable} RUNTIME DESTINATION ${CCL_INSTALL_EXAMPLES})
endforeach()
