file(GLOB sources "*.c" "*.cpp")

link_directories(${PROJECT_SOURCE_DIR}/ofi/lib)
link_directories(${PROJECT_SOURCE_DIR}/mpi/lib)
foreach(src ${sources})
    get_filename_component(executable ${src} NAME_WE)
    add_executable(${executable} ${src})
    target_include_directories(${executable} PRIVATE ${EXAMPLES_INC_DIRS})
    target_link_libraries(${executable} PUBLIC rt)
    target_link_libraries(${executable} PUBLIC m)
    target_link_libraries(${executable} PRIVATE ccl)
    target_link_libraries(${executable} PRIVATE fabric m)    
    target_link_libraries(${executable} PRIVATE mpi)
    target_link_libraries(${executable} PRIVATE ${COMPUTE_RUNTIME_TARGET_NAME})
    install(TARGETS ${executable} RUNTIME DESTINATION ${CCL_INSTALL_EXAMPLES})
endforeach()
